--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>E-commerce</title>
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="bg-light" onload="loadProduct()">
     <nav class="navbar navbar-light bg-white justify-content-between">
@@ -24,7 +25,7 @@
     </div>
 
     <div class="modal fade" id="panier" tabindex="-1" role="dialog"
-      aria-labelledby="panierLabel" aria-hidden="true">
+      aria-labelledby="panierLabel" >
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -84,15 +85,18 @@
             <div class="modal-body">
               <form action="">
                 <label for="nom">Nom</label>
-                <input type="text" id="nom" class="form-control">
+                <input type="text" id="nom" class="form-control" oninput="verifyFirstName()">
+                <p class="text-danger" id="nomInvalid" hidden>Ce champs est obligatoire</p>
                 <label for="prenom">Prenom</label>
-                <input type="text" id="prenom" class="form-control">
+                <input type="text" id="prenom" class="form-control" oninput="verifyLastName()">
+                <p class="text-danger" id="prenomInvalid" hidden>Ce champs est obligatoire</p>
                 <label for="adresse">Adresse</label>
-                <input type="text" id="adresse" class="form-control">
+                <input type="text" id="adresse" class="form-control" oninput="verifyAddress()">
+                <p class="text-danger" id="adresseInvalid" hidden>Ce champs est obligatoire</p>
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" data-toggle="modal" data-dismiss="modal" id="envoie" data-target="#panier"   class="btn btn-primary">Envoyer</button>
+              <button type="button" data-toggle="modal" data-dismiss="modal" id="envoie" data-target="#panier" disabled  class="btn btn-primary">Envoyer</button>
             </div>
           </div>
         </div>
@@ -105,8 +109,8 @@
         </div>
     </footer>
 
-    <script src="../js/jquery.slim.min.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="js/jquery.slim.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
